# opencv_ocr_digits

./: CMakeLists.txt  CvThreshold.cpp  CvThreshold.h  main.cpp
